Archive2/a4/49825ad24dab5a/output
main.cpp: In instantiation of 'void n::foo(const T&) [with T = A]':
main.cpp:15:10:   required from 'void bar(const T&) [with T = A]'
main.cpp:35:7:   required from here
main.cpp:6:3: error: 'const class A' has no member named 'doesnt_have_this_method'
   t.doesnt_have_this_method();
   ^
